[minor] ui gap fix

--- a/src/app/pages/live-view/live-view-page/live-view-page-component.component.scss
+++ b/src/app/pages/live-view/live-view-page/live-view-page-component.component.scss
@@ -1,4 +1,7 @@
 .live-view-container {
   width: 100%;
   height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
